tests/positive/basic/indexof_suffix/input.ci
void main() {
    print(toString(indexOf("alpha", "ha")) + "\n");
}
