tests/negative/runtime/byteat_out_of_bounds/input.ci
void main() {
    print(toString(byteAt("abc", 100)) + "\n");
}
